Add draft of the requirement satisfaction table.

--- a/dsr_generator/example.tex
+++ b/dsr_generator/example.tex
@@ -1,6 +1,8 @@
 \documentclass{report}
 
-\usepackage{hyperref}
+\usepackage[colorlinks=true]{hyperref}
+\usepackage{longtable}
+\usepackage{array}
 
 \begin{document}
 
