Tidy up the latex.

--- a/dsr_generator/example.tex
+++ b/dsr_generator/example.tex
@@ -4,10 +4,13 @@
 \usepackage{longtable}
 \usepackage{array}
 
+\newcommand{\reveal}[0]{{\sc reveal}\texttrademark}
+
 \begin{document}
 
 \chapter{Introduction}
 \input{introduction.tex}
+
 \chapter{DSR}
 \input{dsr.tex}
 
