Added context diagram to Requirements Document

--- a/dummy/Requirements_Engineering/application_requirements.tex
+++ b/dummy/Requirements_Engineering/application_requirements.tex
@@ -3,6 +3,8 @@
 \usepackage[colorlinks=true]{hyperref}
 \usepackage{longtable}
 \usepackage{array}
+\usepackage{pdfpages}
+\usepackage{graphics}
 
 \newcommand{\reveal}[0]{{\sc reveal}\texttrademark}
 
@@ -10,6 +12,9 @@
 
 \chapter{Introduction}
 \input{introduction.tex}
+
+\chapter{Context Diagram}
+\includegraphics[width=\textwidth]{RE_Diagrams.pdf}
 
 \chapter{DSR}
 \input{dsr.tex}
