Fix unix/windows issues and file permissions.

--- a/dummy/documentation/process/ProcessAndTools.tex
+++ b/dummy/documentation/process/ProcessAndTools.tex
@@ -3,7 +3,7 @@
 \usepackage[colorlinks=true]{hyperref}
 \usepackage{longtable}
 \usepackage{array}
-\usepackage{xcolour}
+\usepackage{xcolor}
 \usepackage{pdfpages}
 
 \newcommand{\reveal}[0]{{\sc reveal}\texttrademark}
@@ -14,7 +14,7 @@
 \begin{document}
 
 \chapter{Introduction}
-\input{introduction.tex}
+\input{Introduction.tex}
 
 \chapter{Process Overview}
 \input{processSummary.tex}
@@ -22,7 +22,7 @@
 
 
 \section{SPARK2012 Overview}
-\input{SPARK2012Overview.tex}
+\input{Spark2012Overview.tex}
 
 \chapter{Tools}
 \section{GNAT2012}
