Tidy up LaTeX a bit. Process figure is now a sidewaysfigure.

--- a/dummy/documentation/process/Acknowledgements.tex
+++ b/dummy/documentation/process/Acknowledgements.tex
@@ -1,5 +1,10 @@
 \label{Acknowledgments}
-As can be seen from the Team section, the members of this team have been drawn from Adacore, \altran and Mitsubishi, and we would like to thank our employers for there support in our taking part in this competition. 
+As can be seen from the Team section, the members of this team have
+been drawn from AdaCore, \altran\ and Mitsubishi, and we would like to
+thank our employers for there support in our taking part in this
+competition.
 
-We would especially like to thank them for allowing us to explore and use their tools and techniques to build a well-defined process for application to this problem.
+We would especially like to thank them for allowing us to explore and
+use their tools and techniques to build a well-defined process for
+application to this problem.
 
