--- a/dummy/documentation/process/RevealOverview.tex
+++ b/dummy/documentation/process/RevealOverview.tex
@@ -37,6 +37,7 @@ artefacts:
   Requirements.
 \end{itemize}
 
+\noindent
 Once this information has been gathered, a Satisfaction Argument is
 constructed to show that all the Stakeholder Requirements have been
 addressed through the System Specification and Domain Statements. (As
@@ -44,8 +45,9 @@ Verification and Validation progresses, V\&V Plans and summary results
 can also inform the satisfaction argument, although this may not be
 done for the competition.)
 
-The \reveal\ process is far more extensive than that
-described above including detailed processes for:
+The \reveal\ process is far more extensive than that described above
+including detailed processes for:
+
 \begin{itemize}
 \item Stakeholder Identification,
 \item Knowledge Elicitation,
@@ -54,9 +56,14 @@ described above including detailed processes for:
 \item Requirements Maintenance and Management.
 \end{itemize}
 
-More information on the \reveal\ method can be found on
-\url{http://intelligent-systems.altran.com/technologies/systems-engineering/revealtm.html}.
+\noindent
+More information on the \reveal\ method can be found on:
+\begin{center}
+  \scriptsize
+  \url{http://intelligent-systems.altran.com/technologies/systems-engineering/revealtm.html}
+\end{center}
 
+\noindent
 Since by its nature the VSTTE 2013 competition has a very short
 timescale, and the Requirements are provided by the competition
 organisers it is not expected that there would be time to apply a full
