--- a/dummy/documentation/process/processSummary.tex
+++ b/dummy/documentation/process/processSummary.tex
@@ -1,5 +1,8 @@
-\label{ProcessSummary}
-\includepdf[pages={1}]{SwimLaneProcessDiagram.pdf}
+\begin{sidewaysfigure}[p]
+    \includegraphics[width=\textwidth]{SwimLaneProcessDiagram.pdf}
+    \caption{Our process}
+    \label{fig:the_process}
+\end{sidewaysfigure}
 
 \section{\reveal\ Overview}
 \input{RevealOverview.tex}
