--- a/dummy/architecture/architecture.tex
+++ b/dummy/architecture/architecture.tex
@@ -1,10 +1,10 @@
 \documentclass{article}
 
-
 \usepackage{tikz}
 \usetikzlibrary{calc,fit,shapes,arrows}
 
 \usepackage{listings}
+\usepackage{wrapfig}
 
 \newcommand{\informed}[0]{{\sc informed}}
 
@@ -133,6 +133,7 @@
 \lstinputlisting{spark/main.adb}
 
 \appendix
+\clearpage
 \section{\informed\ Element Definitions}
 
 \input{annex.tex}
