Add self description, team name

--- a/dummy/documentation/process/ProcessAndTools.tex
+++ b/dummy/documentation/process/ProcessAndTools.tex
@@ -15,7 +15,7 @@
 \newcommand{\altran}[0]{Altran}
 
 \title{VSTTE'13}
-\author{Team Name Goes Here}
+\author{SPARK Pro-metheus}
 
 \begin{document}
 
@@ -28,8 +28,8 @@
 \label{ProcessSummary}
 \input{processSummary.tex}
 
-\section{SPARK2012 Overview}
-\input{Spark2012Overview.tex}
+\section{SPARK 2014 Overview}
+\input{Spark2014Overview.tex}
 
 % \chapter{Tools}
 % \section{GNAT2012}
