--- a/dummy/documentation/process/team.tex
+++ b/dummy/documentation/process/team.tex
@@ -8,3 +8,14 @@ effective deployment of software engineering activities.
 In this project Alan has been involved in developing the processes,
 applying the \reveal\ and \informed\ processes and developing
 documentation to support the delivery of the project.
+
+\paragraph{Yannick Moy}\label{YannickMoy}
+is a senior engineer at AdaCore, working on static
+analysis and formal verification tools for Ada and SPARK programs. He
+previously worked on similar tools for C/C++ programs at PolySpace,
+INRIA research labs, and Microsoft Research. Moy received a PhD in
+formal program verification from Université Paris-Sud.
+
+In this project, Yannick has been involved in developing formal
+specifications, implementing code, and verifying (formally and by testing)
+that the code matches the formal specifications.
