Typo fixes. Add short bio of David
Signed-off-by: David MENTRE <dmentre@linux-france.org>

--- a/dummy/documentation/process/Acknowledgements.tex
+++ b/dummy/documentation/process/Acknowledgements.tex
@@ -1,6 +1,6 @@
 \label{Acknowledgments}
 As can be seen from the Team section, the members of this team have
-been drawn from AdaCore, \altran\ and Mitsubishi, and we would like to
+been drawn from AdaCore, \altran\ and Mitsubishi Electric, and we would like to
 thank our employers for there support in our taking part in this
 competition.
 
