--- a/dummy/documentation/process/team.tex
+++ b/dummy/documentation/process/team.tex
@@ -14,8 +14,15 @@ is a senior engineer at AdaCore, working on static
 analysis and formal verification tools for Ada and SPARK programs. He
 previously worked on similar tools for C/C++ programs at PolySpace,
 INRIA research labs, and Microsoft Research. Moy received a PhD in
-formal program verification from Université Paris-Sud.
+formal program verification from Universit\'e Paris-Sud.
 
 In this project, Yannick has been involved in developing formal
 specifications, implementing code, and verifying (formally and by testing)
 that the code matches the formal specifications.
+
+\paragraph{David Mentr\' e}\label{DavidMentre} is a research engineer at
+Mitsubishi Electric R\&D Centre Europe, working on the application of
+formal methods to industrial product development. He received a PhD in
+Computer Science from Rennes~1 University.
+
+In this project, David has been involved in... FIXME
