Updated Introduction and Summary

--- a/dummy/documentation/process/Introduction.tex
+++ b/dummy/documentation/process/Introduction.tex
@@ -1,7 +1,12 @@
 \label{ProcessOverview}
 
-\subsection{Detailed Description}
+This document provides an overview of the process, tools and
+techniques used to translate the requirements supplied as
+part of the project brief into a detailed specification, design
+and implementation.
 
-\tbc
+The \reveal, \informed\ and SPARK2014 tools and techniques are
+discussed, and a brief biography of the team members is also
+documented within this report.
 
 
