--- a/dummy/documentation/process/processSummary.tex
+++ b/dummy/documentation/process/processSummary.tex
@@ -17,7 +17,8 @@ The swimlane diagram shown in Figure ~\ref{fig:the_process} on page
             \item Test Engineer
          \end{itemize}
 
-    These steps are part of the applied processes:
+    The development steps in the swimlane diagram are part of the applied techniques
+    listed below :
 
          \begin{itemize}
             \item \reveal\ - Development Context Diagram; Elicit Requirements; Boundary
@@ -44,6 +45,8 @@ The swimlane diagram shown in Figure ~\ref{fig:the_process} on page
     \caption{Our process}
     \label{fig:the_process}
 \end{sidewaysfigure}
+
+\clearpage
 
 \section{\reveal\ Overview}
 \input{RevealOverview.tex}
