--- a/dns_server/main.tex
+++ b/dns_server/main.tex
@@ -238,6 +238,40 @@ process, however the benefits of the benifits of the modelling
 approach and the translation in \spark\ Package Specifications can be
 shown in this project.
 
+\section{Tools}
+
+\subsection{\spark 2014}
+\spark\ is one of the premier environments for industrial development
+of critical software. It consists of an Ada-based programming and
+specification language and associated verification tools that provide
+support for compositional, software-contract based specification and
+verification for both functional and information flow
+properties. Since its inception over 20 years ago, continuous research
+and development has enabled \spark\ to establish an enviable
+industrial track-record in the development of the most safety and
+security-critical systems.
+
+Despite its significant benefits, the most widely used versions of
+\spark\ (\spark 2005 and predecessors) suffer from some limitations:
+contracts are embedded in comments, the language subset supported for
+formal verification is limited, and \spark's contract language only has
+a logical interpretation (not an accompanying executable
+interpretation).
+
+To overcome these limitations, the next version of \spark\ to be
+issued in 2014 aligns \spark\ with Ada 2012, thus providing native
+support for contracts with very powerful contract expressions, whose
+semantics are unified between the logical and executable views.
+
+The GNAT compiler for Ada supports most of \spark\ 2014 constructs
+already.  The accompanying formal verification tool GNATprove
+co-developed between AdaCore and Altran is currently available as a
+prototype.
+
+\section{The Team}
+\input{team.tex}
+
+
 
 \chapter{Requirements, Domain and Specification}
 \mustDo{Context Diagram}
