Add weasel words.

--- a/dns_server/main.tex
+++ b/dns_server/main.tex
@@ -37,6 +37,27 @@ The \reveal, \informed\ and \spark 2014 tools and techniques are
 discussed, and a brief biography of the team members is also
 documented within this report.
 
+\section{Scope}
+Due to the size of the problem and the short duration of the
+competition, we have chosen to reduce scope for the challenge in order
+to prove an answer to each of the point-scoring categories. In
+particular we wish to address what we believe the overarching idea of
+the competition is: to show a combination of processes that can be
+used for the entire project lifecycle, resulting in high-quality
+verified software. Scope is reduced in the following areas:
+
+\begin{itemize}
+\item Only the most important parts of the \reveal\ and \informed\
+  process are applied, discussed in more detail below.
+
+\item The domain analysis, requirements and architecture is performed
+  on the whole of the problem; emphasising breadth not depth.
+
+\item Design, implementation, validation, verification and
+  traceability is performed on only sub-problem 1\shouldDo{and maybe
+    sub-problem 4}; emphasising depth and not breadth.
+\end{itemize}
+
 \section{Process Overview}
 The swimlane diagram shown in Figure ~\ref{fig:the_process} on page
 ~\pageref{fig:the_process} has three classes of swimlane:
