Add references. Make link colour a bit more palatable.

--- a/dns_server/main.tex
+++ b/dns_server/main.tex
@@ -3,12 +3,15 @@
 \title{VSTTE'13 - DNS Server - Process, Requirements and Architecture}
 \author{SPARK Pro-metheus Team}
 
-\usepackage[colorlinks=true]{hyperref}
+\bibliographystyle{plain}
+
+\usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 \usepackage{longtable}
 \usepackage{array}
 \usepackage{graphics}
 \usepackage{xcolor}
 \usepackage{rotating}
+\usepackage{cite}
 
 \usepackage[textsize=scriptsize,textwidth=4cm]{todonotes}
 \newcommand{\mustDo}[1]{\todo[color=red!40]{MUST: #1}}
@@ -20,6 +23,7 @@
 \newcommand{\spark}[0]{{\sc Spark}}
 \newcommand{\reveal}[0]{{\sc reveal}\texttrademark}
 \newcommand{\informed}[0]{{\sc informed}}
+
 
 \begin{document}
 
@@ -303,6 +307,7 @@ prototype.
 
 \chapter{Architecture}
 
+\bibliography{main}
 
 \end{document}
 
