--- a/dns_server/main.tex
+++ b/dns_server/main.tex
@@ -296,6 +296,17 @@ prototype.
 \section{The Team}
 \input{team.tex}
 
+\section{Acknowledgements}
+As can be seen from the Team section, the members of this team have
+been drawn from AdaCore, Altran and Mitsubishi Electric, and we would
+like to thank our employers for there support in our taking part in
+this competition.
+
+We would especially like to thank them for allowing us to explore and
+use their tools and techniques to build a well-defined process for
+application to this problem.
+
+
 
 
 \chapter{Requirements, Domain and Specification}
