Add more weasel words.

--- a/dns_server/main.tex
+++ b/dns_server/main.tex
@@ -50,26 +50,34 @@ The \reveal, \informed\ and \spark 2014 tools and techniques are
 discussed, and a brief biography of the team members is also
 documented within this report.
 
-\section{Scope}
+\section{Scope and caveats}
 Due to the size of the problem and the short duration of the
 competition, we have chosen to reduce scope for the challenge in order
-to prove an answer to each of the point-scoring categories. In
+to provide an answer to each of the point-scoring categories. In
 particular we wish to address what we believe the overarching idea of
 the competition is: to show a combination of processes that can be
 used for the entire project lifecycle, resulting in high-quality
-verified software. Scope is reduced in the following areas:
+verified software. The scope has been reduced in the following areas:
 
 \begin{itemize}
-\item Only the most important parts of the \reveal\ and \informed\
-  process are applied, discussed in more detail below.
+\item We have only used a process inspired by the \reveal\ and
+  \informed\ process, briefly introduced in the sections to
+  follow. Due to due to time and competition constraints we have
+  omitted key steps, such as stake-holder interviews from these
+  processes.
 
 \item The domain analysis, requirements and architecture is performed
-  on the whole of the problem; emphasising breadth not depth.
+  on the whole of the problem; emphasising breadth not depth. In
+  particular none of the above are \emph{complete}, and intended to
+  only provide an illustration of the full process - however hopefully
+  the difference between requirements, specification and domain
+  knowledge has been clearly illustrated.
 
 \item Design, implementation, validation, verification and
-  traceability is performed on only sub-problem 1\shouldDo{and maybe
-    sub-problem 4}; emphasising depth and not breadth.
+  traceability is performed on only sub-problem 1; emphasising depth
+  and not breadth.
 \end{itemize}
+
 
 \section{Process Overview}
 The swimlane diagram shown in Figure ~\ref{fig:the_process} on page
