Lets talk about features, not limitations! :)

--- a/dns_server/main.tex
+++ b/dns_server/main.tex
@@ -293,21 +293,16 @@ and development has enabled \spark\ to establish an enviable
 industrial track-record in the development of the most safety and
 security-critical systems.
 
-Despite its significant benefits, the most widely used versions of
-\spark\ (\spark 2005 and predecessors) suffer from some limitations:
-contracts are embedded in comments, the language subset supported for
-formal verification is limited, and \spark's contract language only has
-a logical interpretation (not an accompanying executable
-interpretation).
-
-To overcome these limitations, the next version of \spark\ to be
-issued in 2014 aligns \spark\ with Ada 2012, thus providing native
-support for contracts with very powerful contract expressions, whose
-semantics are unified between the logical and executable views.
+The next version of \spark\ to be issued in 2014 aligns \spark\ with
+Ada 2012, and adds a host of new features over \spark 2005. Contracts
+are now expressed as aspects and not comments, the language subset has
+been greatly extended and the contract language itself is richer as
+well. In addition, contract semantics are unified between the logical
+and executable views.
 
 The GNAT compiler for Ada supports most of \spark\ 2014 constructs
 already.  The accompanying formal verification tool GNATprove
-co-developed between AdaCore and Altran is currently available as a
+(co-developed between AdaCore and Altran) is currently available as a
 prototype.
 
 \section{The Team}
