Review comments from Andrew.

--- a/dns_server/main.tex
+++ b/dns_server/main.tex
@@ -121,8 +121,8 @@ The swimlane diagram shown in Figure ~\ref{fig:the_process} on page
 
   Prior to the execution of the project two activities have been
   applied, these are: Process Definition and Tool Selection.  Process
-  design is applied to all Altran projects, and is tailored to
-  select Procedures and Processes from a library of techniques, and is
+  design is applied to all our projects, and is tailored to select
+  procedures and processes from a library of techniques, and is
   intended to produce an optimal mechanism to deliver the solution.
 
 \item Infrastructure - identifies the tools used in the solution of
